--- a/1.html
+++ b/1.html
@@ -21,5 +21,41 @@
     <p style="margin-top:30px;">
       제주시에서 동쪽으로 <strong>14 km</strong> 떨어져 있다. 물이 맑고 수심이 얕아 <u>가족단위 피서지로 알맞으며 국민관광지로 지정되어 있다</u>. 본래 바다였던 곳이 바다가 얕아지면서 10~15 m의 패사층이 넓게 이루어졌다. 동쪽에는 나지막하고 완만한 서우산 (犀牛山:111 m)이 있고, 서쪽 신흥리(新興里) 해변에는 연북정(戀北亭:지방유형문화재 8)이 위치한다.
     </p>
+    <p>
+            <div id="disqus_thread"></div>
+      <script>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://web2-n63xz0moxw.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+    <p>
+            <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/62bd25f27b967b11799738a1/1g6pdofjt';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+      <!--End of Tawk.to Script-->
+    </p>
   </body>
 </html>
