--- a/2.html
+++ b/2.html
@@ -21,5 +21,41 @@
     <p style="margin-top:30px;">
       ​1100고지 습지는 <u>한라산 고원지대에 형성된 대표적인 산지습지로서</u> 16개 이상의 습지가 불연속적으로 분포하고 있으며, 이 습지들을 따라 2009년에 습지보호지역이 설정되었으며 같은 해에 람사르 습지에 등록되었다.​​​​​​​​​​ 1100고지 습지의 동물과 식생환경에 대한 안내문이 탐방로 곳곳에 설치되어 있어 습지의 정보를 알 수 있다. 이곳에는 한라산에서만 서식하는 멸종위기 1급의 야생동물인 매와 야생생물 등이 존재하고 있으며, 습지의 낮은 곳에 고여있는 물은 야생동물의 식수원 역할을 하고 있다. 습지 안에는 나무로 이루어진 자연 생태탐방로가 있어 걸으면서 습지를 관람할 수 있다.​
     </p>
+    <p>
+            <div id="disqus_thread"></div>
+      <script>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://web2-n63xz0moxw.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+    <p>
+            <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/62bd25f27b967b11799738a1/1g6pdofjt';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+      <!--End of Tawk.to Script-->
+    </p>
   </body>
 </html>
