--- a/3.html
+++ b/3.html
@@ -21,5 +21,41 @@
     <p style="margin-top:30px;">
       ​높이 180m. 제주특별자치도 동쪽에 돌출한 성산반도 끝머리에 있다. 중기 홍적세 때 분출된 화산인 성산봉은 커다란 사발모양의 평평한 분화구가 섬 전체에 걸쳐 있다. 3면이 깎아지른 듯한 해식애를 이루며, 분화구 위는 99개의 바위 봉우리가 빙 둘러 서 있다. 그 모습이 거대한 성과 같다 하여 성산이라 하며, 해돋이가 유명하여 일출봉이라고 한다. <br><br>2.64㎢의 넓은 분화구 안에는 풀밭이 펼쳐져 커다란 원형 경기장을 방불케 한다. 이 풀밭은 예로부터 성산리 주민들의 연료 및 초가지붕을 이는 띠의 채초지(採草地)와 방목지(放牧地)로 쓰여져 왔기 때문에 나무는 거의 없고 억새·띠 등의 식물군락을 이루고 있다. <br><br>본래는 육지와 떨어진 섬이었으나 너비 500m 정도의 사주가 1.5km에 걸쳐 발달하여 일출봉과 제주특별자치도를 이어 놓았다. 매표소에서 전망대까지는 걸어서 25분 걸리며, 전망대에서 바라보는 해돋이 광경은 예로부터 영주(瀛州)10경의 하나로 꼽혀왔다. <br><br>1976년에 제주특별자치도 기념물 제36호로 지정·보호하다가 일출봉을 포함한 1㎞ 이내의 해역을 포함한 구역을 2000년 7월 18일 천연기념물 제420호로 변경하여 관리하고 있다.
     </p>
+    <p>
+            <div id="disqus_thread"></div>
+      <script>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://web2-n63xz0moxw.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+    <p>
+            <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/62bd25f27b967b11799738a1/1g6pdofjt';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+      <!--End of Tawk.to Script-->
+    </p>
   </body>
 </html>
