--- a/4.html
+++ b/4.html
@@ -21,5 +21,41 @@
     <p style="margin-top:30px;">
       ​높이 1,950m이다. 남한에서 가장 높은 산이다. 제3기 말∼제4기 초에 분출한 휴화산이다. 현무암으로 이루어져 있으며 줄기는 제주도 중앙에서 동서로 뻗는다. 남쪽은 경사가 심한 반면 북쪽은 완만하고, 동서쪽은 비교적 높으면서도 평탄하다. <br><br>예로부터 부악(釜岳)·원산(圓山)·진산(鎭山)·선산(仙山)·두무악(頭無岳)·영주산(瀛州山)·부라산(浮羅山)·혈망봉(穴望峰)·여장군(女將軍) 등 많은 이름으로 불렸고, 민간 신앙에서는 금강산·지리산과 함께 삼신산(三神山) 가운데 하나로 치기도 한다. <br><br>정상에는 둘레 약 3㎞, 지름 500m의 화구호인 백록담(白鹿潭)이 있으며, 주위 사방에 흙붉은오름[土赤岳]·사라오름[砂羅岳]·성널오름[城板岳]·어승생오름[御乘生岳] 등 360여 개의 측화산을 거느리고 있다. <br><br>또 해안지대에는 폭포와 주상절리 등 아름다운 화산지형이 펼쳐지고, 해발고도에 따라 아열대·온대·냉대 등 1,800여 종에 달하는 고산식물이 자생하여 식생의 변화가 뚜렷하다. 봄의 철쭉·진달래·유채, 가을의 단풍, 겨울의 설경과 운해가 절경이며, 곳곳에서 한라산의 상징인 노루를 볼 수 있다. <br><br>1002년(고려 목종 5)과 1007년에 분화하였다는 기록이 《동국여지승람(東國輿地勝覽)》에 나오는데, 1455년(조선 세조 1)과 1670년(현종 11)에는 지진이 일어나 피해가 컸다는 기록도 있다. 1970년 국립공원으로 지정되었고, 해마다 1월 마지막 주에는 어리목을 중심으로 눈꽃축제가 열린다.
     </p>
+    <p>
+            <div id="disqus_thread"></div>
+      <script>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://web2-n63xz0moxw.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+    <p>
+            <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/62bd25f27b967b11799738a1/1g6pdofjt';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+      <!--End of Tawk.to Script-->
+    </p>
   </body>
 </html>
