--- a/3.html
+++ b/3.html
@@ -3,19 +3,39 @@
   <head>
     <title>성산일출봉</title>
     <meta charset="utf-8">
+    <style>
+      .jj{
+        font-weight:bold;
+      }
+      #first{
+        color:powderblue;
+      }
+      span{
+        color:coral
+      }
+    </style>
   </head>
 
   <body>
-    <h1><a href="index.html">제주도</a></h1>
+    <h1><a href="index.html"><font color="coralblue">제주도</font></a></h1>
+    <input type="button" value="Hi" onclick="alert('Hi')">
+    <input type="button" value="night" onclick="
+      document.querySelector('body').style.backgroundColor = 'black';
+      document.querySelector('body').style.color = 'white';
+    ">
+    <input type="button" value="day" onclick="
+      document.querySelector('body').style.backgroundColor = 'white';
+      document.querySelector('body').style.color = 'black';
+    ">
     <ol>
-      <li><a href="1.html">함덕해수욕장</a></li>
-      <li><a href="2.html">1100고지</a></li>
-      <li><a href="3.html">성산일출봉</a></li>
-      <li><a href="4.html">한라산</a></li>
+      <li><a href="1.html"><font color="green">함덕해수욕장</font></a></li>
+      <li><a href="2.html"><font color="green">1100고지</font></a></li>
+      <li><a href="3.html"><font color="green">성산일출봉</font></a></li>
+      <li><a href="4.html"><font color="green">한라산</font></a></li>
     </ol>
     <h2>성산일출봉</h2>
     <p>
-      <strong><a href="https://map.naver.com/v5/entry/place/11491438?c=14130901.6394468,3956377.4949695,13.07,0,0,0,dh&placePath=%2Fhome&entry=plt" target="_blank" title="성산일출봉 위치">성산일출봉<a/></strong> 은 제주 서귀포시 성산읍에 있는 관광명소로, 제주도의 동쪽 끝에 위치한 관광지이다. 성산일출봉은 동쪽에 위치한 만큼 많은 사람들에게 일출 명소로 알려져 있다. 일출 뿐만 아니라 높은 곳에 위치해 있어서 성산일출봉에서 내려다 보는 풍경이 너무 아름답다.
+      <a href="https://map.naver.com/v5/entry/place/11491438?c=14130901.6394468,3956377.4949695,13.07,0,0,0,dh&placePath=%2Fhome&entry=plt" target="_blank" title="성산일출봉 위치"><span id="first" class="jj">성산일출봉</span><a/> 은 제주 서귀포시 성산읍에 있는 관광명소로, 제주도의 동쪽 끝에 위치한 관광지이다. <span class="jj">성산일출봉</span>은 동쪽에 위치한 만큼 많은 사람들에게 일출 명소로 알려져 있다. 일출 뿐만 아니라 높은 곳에 위치해 있어서 성산일출봉에서 내려다 보는 풍경이 너무 아름답다.
       <br><br><img src="sunrise.jpg" width="100%">
     </p>
     <p style="margin-top:30px;">
