--- a/1.html
+++ b/1.html
@@ -3,43 +3,49 @@
   <head>
     <title>함덕해수욕장</title>
     <meta charset="utf-8">
-    <style>
-      .jj{
-        font-weight:bold;
-      }
-      #first{
-        color:powderblue;
-      }
-      span{
-        color:coral;
-      }
-    </style>
   </head>
 
   <body>
-    <h1><a href="index.html"><font color="coralblue">제주도</font></a></h1>
-    <input type="button" value="Hi" onclick="alert('Hi')">
-    <input type="button" value="night" onclick="
-      document.querySelector('body').style.backgroundColor = 'black';
-      document.querySelector('body').style.color = 'white';
-    ">
-    <input type="button" value="day" onclick="
-      document.querySelector('body').style.backgroundColor = 'white';
-      document.querySelector('body').style.color = 'black';
+    <h1><a href="index.html">제주도</a></h1>
+    <input id="night_day" type="button" value="night" onclick="
+      var target=document.querySelector('body');
+      if(this.value === 'night'){
+        target.style.backgroundColor = 'black';
+        target.style.color = 'white';
+        this.value = 'day';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length){
+          alist[i].style.color = 'powderblue';
+          i = i + 1;
+        }
+      } else {
+        target.style.backgroundColor = 'white';
+        target.style.color = 'black';
+        this.value = 'night';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length){
+          alist[i].style.color = 'blue';
+          i = i + 1;
+        }
+      }
     ">
     <ol>
-      <li><a href="1.html"><font color="green">함덕해수욕장</font></a></li>
-      <li><a href="2.html"><font color="green">1100고지</font></a></li>
-      <li><a href="3.html"><font color="green">성산일출봉</font></a></li>
-      <li><a href="4.html"><font color="green">한라산</font></a></li>
+      <li><a href="1.html">함덕해수욕장</a></li>
+      <li><a href="2.html">1100고지</font></a></li>
+      <li><a href="3.html">성산일출봉</a></li>
+      <li><a href="4.html">한라산</a></li>
     </ol>
     <h2>함덕해수욕장</h2>
     <p>
-      <a href="https://map.naver.com/v5/entry/place/11491805?c=14100999.3831466,3966946.7222181,13.65,0,0,0,dh&placePath=%2Fhome&entry=plt" target="_blank" title="함덕해수욕장 위치"><span id="first" class="jj">함덕해수욕장</span><a/>은 제주 제주시 조천읍에 있는, <span>제주도</span>의 북쪽에 위치한 <span class="jj">해변</span>이다. 예쁘고 감성있는 카페들과, 맛있는 먹거리들, 그리고 아기자기한 서점과 기념품샵 들이 있는 곳으로, <u>많은 관광객들에게 인기있는</u> 장소이다. 넓은 해변에서 해수욕을 즐기는 사람들과 잔디밭에서 피크닉을 하는 사람들이 많이 있다.
+      함덕해수욕장은 제주 제주시 조천읍에 있는, 제주도의 북쪽에 위치한 해변이다. 예쁘고 감성있는 카페들과, 맛있는 먹거리들, 그리고 아기자기한 서점과 기념품샵 들이 있는 곳으로, <u>많은 관광객들에게 인기있는</u> 장소이다. 넓은 해변에서 해수욕을 즐기는 사람들과 잔디밭에서 피크닉을 하는 사람들이 많이 있다.
       <br><br><img src="ocean.jpg" width="100%">
     </p>
     <p style="margin-top:30px;">
-      <span>제주시</span>에서 동쪽으로 14 km 떨어져 있다. 물이 맑고 수심이 얕아 <u>가족단위 피서지로 알맞으며 국민관광지로 지정되어 있다</u>. 본래 바다였던 곳이 바다가 얕아지면서 10~15 m의 패사층이 넓게 이루어졌다. 동쪽에는 나지막하고 완만한 서우산 (犀牛山:111 m)이 있고, 서쪽 신흥리(新興里) 해변에는 연북정(戀北亭:지방유형문화재 8)이 위치한다.
+      제주시에서 동쪽으로 14 km 떨어져 있다. 물이 맑고 수심이 얕아 <u>가족단위 피서지로 알맞으며 국민관광지로 지정되어 있다</u>. 본래 바다였던 곳이 바다가 얕아지면서 10~15 m의 패사층이 넓게 이루어졌다. 동쪽에는 나지막하고 완만한 서우산 (犀牛山:111 m)이 있고, 서쪽 신흥리(新興里) 해변에는 연북정(戀北亭:지방유형문화재 8)이 위치한다.
     </p>
     <p>
             <div id="disqus_thread"></div>
