--- a/4.html
+++ b/4.html
@@ -3,43 +3,49 @@
   <head>
     <title>한라산</title>
     <meta charset="utf-8">
-    <style>
-      .jj{
-        font-weight:bold;
-      }
-      #first{
-        color:powderblue
-      }
-      span{
-        color:coral;
-      }
-    </style>
   </head>
 
   <body>
-    <h1><a href="index.html"><font color="coralblue">제주도</font></a></h1>
-    <input type="button" value="Hi" onclick="alert('Hi')">
-    <input type="button" value="night" onclick="
-      document.querySelector('body').style.backgroundColor = 'black';
-      document.querySelector('body').style.color = 'white';
-    ">
-    <input type="button" value="day" onclick="
-      document.querySelector('body').style.backgroundColor = 'white';
-      document.querySelector('body').style.color = 'black';
+    <h1><a href="index.html">제주도</a></h1>
+    <input id="night_day" type="button" value="night" onclick="
+      var target=document.querySelector('body');
+      if(this.value === 'night'){
+        target.style.backgroundColor = 'black';
+        target.style.color = 'white';
+        this.value = 'day';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length){
+          alist[i].style.color = 'powderblue';
+          i = i + 1;
+        }
+      } else {
+        target.style.backgroundColor = 'white';
+        target.style.color = 'black';
+        this.value = 'night';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0;
+        while(i < alist.length){
+          alist[i].style.color = 'blue';
+          i = i + 1;
+        }
+      }
     ">
     <ol>
-      <li><a href="1.html"><font color="green">함덕해수욕장</font></a></li>
-      <li><a href="2.html"><font color="green">1100고지</font></a></li>
-      <li><a href="3.html"><font color="green">성산일출봉</font></a></li>
-      <li><a href="4.html"><font color="green">한라산</font></a></li>
+      <li><a href="1.html">함덕해수욕장</a></li>
+      <li><a href="2.html">1100고지</a></li>
+      <li><a href="3.html">성산일출봉</a></li>
+      <li><a href="4.html">한라산</a></li>
     </ol>
     <h2>한라산</h2>
     <p>
-      <a href="https://map.naver.com/v5/entry/place/11796130?c=14085744.0296166,3943066.5405758,13,0,0,0,dh&placePath=%2Fhome&entry=plt" target="_blank" title="한라산 위치"><span id="first" class="jj">한라산</span><a/> 은 제주 서귀포시 토평동에 있는 <span>국립공원</span>으로, 제주도를 대표하는 장소 중 하나이다. 많은 등산객들은 물론 자연경관을 보고 즐기러 매해 많은 이들이 찾는 곳이다.
+    한라산은 제주 서귀포시 토평동에 있는 국립공원으로, 제주도를 대표하는 장소 중 하나이다. 많은 등산객들은 물론 자연경관을 보고 즐기러 매해 많은 이들이 찾는 곳이다.
       <br><br><img src="mountain.jpg" width="100%">
     </p>
     <p style="margin-top:30px;">
-      ​높이 1,950m이다. 남한에서 가장 높은 산이다. 제3기 말∼제4기 초에 분출한 <span class="jj">휴화산</span>이다. 현무암으로 이루어져 있으며 줄기는 제주도 중앙에서 동서로 뻗는다. 남쪽은 경사가 심한 반면 북쪽은 완만하고, 동서쪽은 비교적 높으면서도 평탄하다. <br><br>예로부터 부악(釜岳)·원산(圓山)·진산(鎭山)·선산(仙山)·두무악(頭無岳)·영주산(瀛州山)·부라산(浮羅山)·혈망봉(穴望峰)·여장군(女將軍) 등 많은 이름으로 불렸고, 민간 신앙에서는 금강산·지리산과 함께 삼신산(三神山) 가운데 하나로 치기도 한다. <br><br>정상에는 둘레 약 3㎞, 지름 500m의 화구호인 <span class="jj">백록담(白鹿潭)</span>이 있으며, 주위 사방에 흙붉은오름[土赤岳]·사라오름[砂羅岳]·성널오름[城板岳]·어승생오름[御乘生岳] 등 360여 개의 측화산을 거느리고 있다. <br><br>또 해안지대에는 폭포와 주상절리 등 아름다운 화산지형이 펼쳐지고, 해발고도에 따라 아열대·온대·냉대 등 1,800여 종에 달하는 고산식물이 자생하여 식생의 변화가 뚜렷하다. 봄의 철쭉·진달래·유채, 가을의 단풍, 겨울의 설경과 운해가 절경이며, 곳곳에서 한라산의 상징인 노루를 볼 수 있다. <br><br>1002년(고려 목종 5)과 1007년에 분화하였다는 기록이 《동국여지승람(東國輿地勝覽)》에 나오는데, 1455년(조선 세조 1)과 1670년(현종 11)에는 지진이 일어나 피해가 컸다는 기록도 있다. 1970년 국립공원으로 지정되었고, 해마다 1월 마지막 주에는 어리목을 중심으로 눈꽃축제가 열린다.
+      ​높이 1,950m이다. 남한에서 가장 높은 산이다. 제3기 말∼제4기 초에 분출한 휴화산이다. 현무암으로 이루어져 있으며 줄기는 제주도 중앙에서 동서로 뻗는다. 남쪽은 경사가 심한 반면 북쪽은 완만하고, 동서쪽은 비교적 높으면서도 평탄하다. <br><br>예로부터 부악(釜岳)·원산(圓山)·진산(鎭山)·선산(仙山)·두무악(頭無岳)·영주산(瀛州山)·부라산(浮羅山)·혈망봉(穴望峰)·여장군(女將軍) 등 많은 이름으로 불렸고, 민간 신앙에서는 금강산·지리산과 함께 삼신산(三神山) 가운데 하나로 치기도 한다. <br><br>정상에는 둘레 약 3㎞, 지름 500m의 화구호인 백록담(白鹿潭)이 있으며, 주위 사방에 흙붉은오름[土赤岳]·사라오름[砂羅岳]·성널오름[城板岳]·어승생오름[御乘生岳] 등 360여 개의 측화산을 거느리고 있다. <br><br>또 해안지대에는 폭포와 주상절리 등 아름다운 화산지형이 펼쳐지고, 해발고도에 따라 아열대·온대·냉대 등 1,800여 종에 달하는 고산식물이 자생하여 식생의 변화가 뚜렷하다. 봄의 철쭉·진달래·유채, 가을의 단풍, 겨울의 설경과 운해가 절경이며, 곳곳에서 한라산의 상징인 노루를 볼 수 있다. <br><br>1002년(고려 목종 5)과 1007년에 분화하였다는 기록이 《동국여지승람(東國輿地勝覽)》에 나오는데, 1455년(조선 세조 1)과 1670년(현종 11)에는 지진이 일어나 피해가 컸다는 기록도 있다. 1970년 국립공원으로 지정되었고, 해마다 1월 마지막 주에는 어리목을 중심으로 눈꽃축제가 열린다.
     </p>
     <p>
             <div id="disqus_thread"></div>
